# landlink

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  capacitor.config.ts  components.json  eslint.config.js  index.html  package-lock.json  package.json  posthog-setup-report.md  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: firmware-release.yml  relay-server.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
firmware/: .gitignore  README.md  partitions.csv  platformio.ini  protocol.yaml
firmware/keys/: README.md
firmware/scripts/: make_ota_keys.py
firmware/src/: main.cpp
firmware/test/test_base64url/: test_main.cpp
firmware/test/test_channel_registry/: test_main.cpp
firmware/test/test_mac_math/: test_main.cpp
firmware/test/test_meshtastic_channel/: test_main.cpp
firmware/test/test_meshtastic_data_pb/: test_main.cpp
firmware/test/test_meshtastic_frame/: test_main.cpp
firmware/test/test_peer_report/: test_main.cpp
firmware/test/test_wifi_backoff/: test_main.cpp
firmware/tools/: gen_protocol.py
public/firmware/: releases.json
script/: publish.sh
server/: .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  landlink-relay.service
server/examples/: fake_device.rs
server/src/: config.rs  crypto.rs  db.rs  envelope.rs  http.rs  lib.rs  limits.rs  main.rs  state.rs  tcp.rs  ws.rs
server/tests/: integration.rs
src/: main.tsx  vite-env.d.ts
src/app/: index.tsx
src/test/: setup.ts
tests/: README.md
(+446 files in other folders)
